Bug 144399 - Impress: FILESAVE to ODP as read-only with additional password protection for editing not working
Summary: Impress: FILESAVE to ODP as read-only with additional password protection for...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Password-Protected
  Show dependency treegraph
 
Reported: 2021-09-09 07:57 UTC by Timur
Modified: 2022-11-09 09:46 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2021-09-09 07:57:09 UTC
Steps to Reproduce:
1. Create a presentation in Impress
2. Save to ODP, select the option to password protect and add the option to make this read-only with an additional password for editing.
3. Enter and confirm your passwords and save the file.
4. Reopen the file.

Experienced: File is editable. 
Expected: File opens Read-only and Edit-Edit mode with password is needed to edit.


Similar problem is with saving to PPTX and PPSX.

Note that there's a different problem with PPT, LO doesn't support saving with password at all. MSO can save both file open and read-only passwords.
Comment 1 Roman Kuznetsov 2021-10-23 16:20:33 UTC
Confirm in

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: f8bb970fd385c80b085a071da0f8acc119498005
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded

and in 7.1 

but not in

Version: 7.0.0.2 (x64)
Build ID: c01aa64b6c3d89ebe5fe69c28c7adb24eb85249c
Потоков ЦП: 4; ОС: Windows 10.0 Build 19043; Отрисовка ИП: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); ИП: ru-RU
Calc: threaded


it's a regression

another problem is even in 7.0 you don't see LO opens the password protected file as read-only, there is no any InfoBar for example
Comment 2 psidiumcode 2021-11-03 17:54:15 UTC
Bisected with mac64-7.2 repo:
 3bda43e3bc659ee9b0380746e005ca17c5bba421 is the first bad commit
commit 3bda43e3bc659ee9b0380746e005ca17c5bba421
Author: libreoffice <libreoffice@libreoffices-Mac-mini.local>
Date:   Sat Apr 10 05:31:23 2021 +0200

    source 67ad205404211a2ae17c430a17ede6e9d04d0b7e
    
    source 67ad205404211a2ae17c430a17ede6e9d04d0b7e

 LibreOffice.app/Contents/Frameworks/libsclo.dylib  | Bin 18529520 -> 18529536 bytes
 LibreOffice.app/Contents/Frameworks/libsdlo.dylib  | Bin 7521596 -> 7521596 bytes
 .../Contents/Frameworks/libsvxcorelo.dylib         | Bin 9088316 -> 9088588 bytes
 LibreOffice.app/Contents/Resources/setuprc         |   2 +-
 LibreOffice.app/Contents/Resources/versionrc       |   2 +-
 5 files changed, 2 insertions(+), 2 deletions(-)
Comment 3 psidiumcode 2021-11-03 17:54:35 UTC Comment hidden (obsolete)
Comment 4 Buovjaga 2021-11-03 17:59:08 UTC
The commit seemed unrelated on quick glance, but I got the same result with linux-64-7.1 https://git.libreoffice.org/core/commit/ea9fff260129ccfa4755e96c08432252efbe5621

Adding Cc: to Samuel Mehrbrodt

Is it the change in sd/source/ui/view/drviews4.cxx ?
Comment 5 Commit Notification 2022-11-07 14:24:01 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/429f3d8e3eddedb7ab183b6530220bc7491302e7

tdf#144399 Don't allow editing in r/o mode

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-11-09 09:46:24 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/9d34b51efba7704beacc06cc93aa0bf6cf51a103

tdf#144399 Don't allow editing in r/o mode

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.