tdf#144399 Don't allow editing in r/o mode

Fallout from ea9fff260129ccfa4755e96c08432252efbe5621

Change-Id: I0c73d13b79389db13bb04046731bdf18b4cf6005
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142382
Tested-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>